Imager release history.  Older releases can be found in Changes.old

 - eliminate the old IIM_new(), IIM_DESTROY() names from Imager's
   internals, those names only matter for the XS interface.

Imager 0.90 - 30 Apr 2012
===========

Bug fixes:

 - Imager::Test::is_imaged() attempted to process an "epsilon"
   parameter but the prototype didn't allow for the extra parameter.
   Corrected the prototype.

 - when downconverting samples (eg. from floating point to 8 bit)
   Imager now rounds the sample value rather than attempting to
   allocate input values over output values equally.  The old
   behaviour had the probably surprising effect of converting a
   floating point 2.1/255.0 into an 8-bit 3 rather than the expected
   2.
   This may result in slightly different 8 or 16-bit output images.

 - BI_BITFIELD BMP images were handled incorrectly, both in
   incorrectly calculating the space required for the masks and in
   processing the image data itself.
   https://rt.cpan.org/Ticket/Display.html?id=76736

 - some odd width BMP BI_RLE4 images use run lengths that run one off
   the edge of the image.  Imager now allows this, discarding the
   extra column.

 - odd length RLE4 runs in BMP images were decoded incorrectly.

 - pkg-config could sometimes return a library that was in a directory
   EU::MM / $Config{libpth} doesn't know about, but the compiler did.
   If no -L is included in the pkg-config library information check if
   EU::MM can find the library, and if not, search our configured
   directories and insert that into the library flags.
   https://rt.cpan.org/Ticket/Display.html?id=75869

 - Imager::Probe can now probe for libraries with dependent libraries,
   common for static linking, eg. libpng requires libz.
   https://rt.cpan.org/Ticket/Display.html?id=74043

 - libpng 1.5 specific probes were looking for libpng 1.4 filenames.

 - added alternative probe configurations that try to link libz, to
   handle a statically linked libpng.