@@ -3,6 +3,13 @@ Imager release history.  Older releases can be found in Changes.old
  - eliminate the old IIM_new(), IIM_DESTROY() names from Imager's
    internals, those names only matter for the XS interface.
 
+ - improve error reporting when PERL_INITIALIZE_IMAGER_CALLBACKS finds
+   the API level compiled into a loadable module such as
+   Imager::File::GIF doesn't match that of Imager.  Previously it
+   could be difficult to determine exactly which module was failing to
+   load.
+   https://rt.cpan.org/Ticket/Display.html?id=77173
+
 Imager 0.90 - 30 Apr 2012
 ===========
 
